--- a/client/src/App.css
+++ b/client/src/App.css
@@ -24,6 +24,17 @@ a {
   margin-left: 1vw;
 }
 
+.VisitorCard {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  border: 2px solid white;
+  border-radius: 10px;
+  align-items: center;
+  justify-content: center;
+  margin-top: 10px;
+}
+
 li:hover {
   color: red;
   cursor: default;
