--- a/client/src/App.css
+++ b/client/src/App.css
@@ -116,7 +116,8 @@ a {
   margin: 0;
 }
 
-#root .AddVisitorCard {
+#root .AddVisitorCard,
+#root .AdminPanel {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -131,7 +132,8 @@ a {
   background-color: var(--input-div-background-color);
 }
 
-.AddVisitorCard input {
+.AddVisitorCard input,
+.AdminPanel input {
   font-size: 16px;
   height: 20%;
   background-color: var(--input-background-color);
@@ -146,7 +148,8 @@ a {
   color: var(--input-div-background-color);
 }
 
-.AddVisitorCard button {
+.AddVisitorCard button,
+.AdminPanel button {
   background-color: var(--submit-background-color);
   border: 1px solid var(--text-color);
   border-radius: 10px;
@@ -159,6 +162,7 @@ a {
   border: 1px solid var(--text-color);
   border-radius: 10px;
 }
+
 li:hover {
   cursor: default;
 }
